Revert "Added appliance-level occurrences on appliance pages"
This reverts commit 892934ded814cb22d473d76260fc97ac86bb751c.
